--- a/config/content.htm
+++ b/config/content.htm
@@ -6,7 +6,6 @@
 <h2>w6</h2>
 <h3>Onshape</h3>
 <p>column-onshape</p>
-<p><a href="https://cad.onshape.com/documents/943ff03a1bc99812b925fc5e/w/cd051917fb89e9c456fad581/e/ddb700a0c54a096ff64eba77">column</a></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -21,7 +20,6 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/column-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">column support-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/837a2f75df9c08c216d4674f/w/fde2bd71dcca6a73562d0099/e/f5c92512c990aaa524a359e7">clumn support</a></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -36,7 +34,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/column support-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">table</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/d77d5c17b9fe187174d93d55/w/7c3ba8d76beeee648b416230/e/186d474b94dfbbd4528090c8">table</a></div>
+<div class="winkVideoContainerClass"></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -51,7 +49,6 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/table-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">table support-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/f437d7471a395603ba5b4aa9/w/88f419e282b897f117eb691d/e/cf06a588969dc0b8d3fd8188">table support</a></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -66,7 +63,6 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/table support-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">clamp-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/d9507296ae076fad16a39d26/w/0c65780e91451026f233e9df/e/4749292ca819cef5cd653b88">clamp</a></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -81,22 +77,10 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/clamp-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">Drill chuck-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/9070036bf5767717a225bb14/w/e47abe4a66259056bedba47d/e/42abb008666a5a9d96ea60a7">Drill churk</a></div>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 8,
-  buttonFrameLength: 4,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/9070036bf5767717a225bb14/w/e47abe4a66259056bedba47d/e/42abb008666a5a9d96ea60a7"> </a><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/Drill chuck-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">Ball bearing _ODC32-IDC12-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/1e5ee2bd6a2ccd6332d50f5c/w/b0cb012ccf9c8517634474e4/e/125adf63750ee50f606e6294">Ball bearing</a></div>
+<div class="winkVideoContainerClass"></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -111,7 +95,6 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/Ball bearing _ODC32-IDC12-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">base-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/7d7bf2d7be96e20fabf66de7/w/dcd826cd7bf373c0264a67cc/e/1956d438169106f0a047f618">base</a></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -126,7 +109,6 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/base-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">Driven pulley-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/35d70c23cee5e40a79f4a90b/w/35b9cbe9bb7a063f9a15f3ab/e/94355858c9e64710b68a3a57">Driven pulley</a></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -141,7 +123,6 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/Driven pulley-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">motor tensioner-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/d8330a6bd946e5086c9fd801/w/695afbf4bdc14b232c59e941/e/acc0363456be6929d786d552">motor tensioner</a></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -156,7 +137,6 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/motor tensioner-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">Knob axle-onshape</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/7c4024ce236d96cd7fb189a3/w/28c5668fc42a1a33d00d4810/e/56317bad888348910b517392">Knob axle</a></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -171,7 +151,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/Knob axle-onshape.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass">part1-1</div>
-<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/8041fa3ebd8b967606317dd4/w/2c883cbff66665a3f74aa658/e/d8ad0e9aff70a178836a12b8">part1-1</a></div>
+<div class="winkVideoContainerClass"></div>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -185,7 +165,7 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/part1-1-onshape.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div><h3>NX</h3>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/c6b3fa023868d3f210b24e49/w/9a5a930590441e734b0d706c/e/01c1807ceed984e10584eb8e?renderMode=0&amp;uiState=63b66ce55e62ba1d6926f1bc">drill</a></div><h3>NX</h3>
 <p><a href="/downloads/鑽台nx.zip">鑽台nx.zip</a></p>
 <p>column support</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
@@ -788,10 +768,10 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><a href="/downloads/w14-solvespace.zip">w14 solvespace</a></div>
 <h2>w14</h2>
 <h3>onshape</h3>
-<p><a href="https://cad.onshape.com/documents/5316d97bac895cd88c79ee43/w/eea4c6470ef2e20ee4caf8c5/e/3f1585eced7575238e50f364">01-onshape</a></p>
-<p><a href="https://cad.onshape.com/documents/19ee24db8dfb1ddd91965552/w/7f32f191e6940124790a9e45/e/7eb746847b5e4689469747d2">02-onshape</a></p>
-<p><a href="https://cad.onshape.com/documents/7fc38a4e54767237aaefe54a/w/d3b503728e29868008d34f02/e/9e3acef7cbaeb5b083f8d401">03-onshape</a></p>
-<p><a href="https://cad.onshape.com/documents/112896f28637cb5bae3e186d/w/11ab4751dd85670a6192d15a/e/c4272c159fd91ac7355748e0">組合-onshape</a></p>
+<p><a href="https://cad.onshape.com/documents/5316d97bac895cd88c79ee43/w/eea4c6470ef2e20ee4caf8c5/e/3f1585eced7575238e50f364?renderMode=0&amp;uiState=63b66d6507c62609642f0194">01</a></p>
+<p><a href="https://cad.onshape.com/documents/19ee24db8dfb1ddd91965552/w/7f32f191e6940124790a9e45/e/7eb746847b5e4689469747d2?renderMode=0&amp;uiState=63b66d89bc31097010e3dfdd">02</a></p>
+<p><a href="https://cad.onshape.com/documents/7fc38a4e54767237aaefe54a/w/d3b503728e29868008d34f02/e/9e3acef7cbaeb5b083f8d401?renderMode=0&amp;uiState=63b66da107c62609642f0297">03</a></p>
+<p><a href="https://cad.onshape.com/documents/112896f28637cb5bae3e186d/w/11ab4751dd85670a6192d15a/e/c4272c159fd91ac7355748e0?renderMode=0&amp;uiState=63b66dbd5e62ba1d6926f5ce">組合</a></p>
 <p>零件1</p>
 <script>
 var winkVideoData = {
